# PandasIO

./: pyproject.toml
pandasio/: __init__.py
