[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pandasio"
version = "0.0.5.1"
description = "Pandas to_sql/read_sql_query with primary/foreign key support"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Egil Moeller", email = "em@emeraldgeo.no" }
]
requires-python = ">=3.11"
dependencies = [
    "pandas>=1.1",
    "sqlalchemy",
]

[project.urls]
Homepage = "https://github.com/EMeraldGeo/PandasIO"
Repository = "https://github.com/EMeraldGeo/PandasIO"

[tool.setuptools.packages.find]
where = ["."]
